--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,11 @@ dist.jlink.output=${dist.jlink.dir}/BloodDonationApp
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.1__1_.jar=C:\\Users\\arpid\\Downloads\\activation-1.1.1 (1).jar
+file.reference.commons-logging-1.2.1.1.jar=C:\\Users\\arpid\\Downloads\\commons-logging-1.2.1.1.jar\\commons-logging-1.2.1.1.jar
 file.reference.db4o-8.0.184.15484-all-java5__1_.jar=C:\\Users\\arpid\\Downloads\\db4o-8.0.184.15484-all-java5 (1).jar
 file.reference.javax.mail.jar=C:\\Users\\arpid\\Downloads\\javax.mail.jar
+file.reference.jcommon-1.0.24.jar=C:\\Users\\arpid\\Downloads\\jcommon-1.0.24.jar
+file.reference.jxmapviewer2-2.6.jar=C:\\Users\\arpid\\Downloads\\jxmapviewer2-2.6.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\arpid\\OneDrive\\Documents\\MSIS\\Softwares\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
@@ -46,7 +49,10 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.db4o-8.0.184.15484-all-java5__1_.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.activation-1.1.1__1_.jar}
+    ${file.reference.activation-1.1.1__1_.jar}:\
+    ${file.reference.jcommon-1.0.24.jar}:\
+    ${file.reference.jxmapviewer2-2.6.jar}:\
+    ${file.reference.commons-logging-1.2.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
